Active API 수정, build